# image_clustering

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: cropping_default.yaml  default.json
examples/evaluation/: README.md  content_pair_labels.json  expected_crops.json  expected_groups.json  reviewed_cases.jsonl  reviewed_cases.overrides.jsonl
src/image_clustering/: __init__.py  cli.py
src/image_clustering/clustering/: __init__.py  api.py  config.py  content.py  content_candidates.py  content_features.py  content_geometry.py  content_grid.py  content_models.py  content_pages.py  content_summary.py  discovery.py  features.py  graph.py  models.py  registration.py  scoring.py  scoring_decision.py  serialization.py
src/image_clustering/cropping/: __init__.py  api.py  cli.py  config.py  coverage.py  default.yaml  diagnostics.py  documents.py  evaluation.py  grouping.py  image_ops.py  io_utils.py  models.py  pipeline.py  registration.py  residuals.py  selection.py
src/image_clustering/evaluation/: __init__.py  cli.py  labels.py
tests/: test_content_scoring.py  test_cropping_config.py  test_cropping_coverage.py  test_cropping_residuals.py  test_cropping_selection.py  test_discovery.py  test_evaluation_labels.py  test_graph.py  test_graph_content_contradiction.py  test_models.py  test_registration.py  test_serialization.py
